source/tests/errors/function.apex
import os
function error()
os.output("Error")